fixed missing floating words in bio due to too large pixel offset

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -351,7 +351,7 @@ section {
 .bio-text-hidden {
     opacity: 0 !important;
     // transition: all 1s ease-in-out !important;
-    transform: translateX(-100px) !important;
+    transform: translateX(-60px) !important;
     display: inline-block;
 }
 
